# magicx-toolbox-gui

./: .editorconfig  .gitattributes  .gitignore  .prettierrc  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  README.md  TWEAK_AUTHORING.md  TWEAK_SYSTEM.md  TWEAK_SYSTEM_REWRITE.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: APP_CONTEXT.md  ARCHITECTURE.md  PROFILE_SYSTEM.md  PROFILE_UI_IMPLEMENTATION.md  ROADMAP.md  TWEAK_AUTHORING.md  TWEAK_SYSTEM.md  TWEAK_SYSTEM_PLAN.md  TWEAK_SYSTEM_REVIEW.md  plan.md
docs/adr/: 0001-rollback-failure-is-a-first-class-state.md  0002-snapshot-deletion-requires-verification-or-consent.md  0003-system-default-is-a-computed-status.md  0003-system-default-is-a-selectable-state.md  0004-value-null-is-not-a-delete-spelling.md  0005-elevation-is-per-tweak-and-never-silently-escalated.md  0006-one-address-one-owner-shared-state-is-declared-and-refcounted.md  0007-option-snapshots-are-references-restore-reapplies-the-current-definition.md
docs/spec/: profile-v1.md
docs/superpowers/plans/: 2026-05-29-rust-backend-audit-remediation.md  2026-07-20-stage-3-effect-layer.md  2026-07-22-tweak-system-redesign.md
docs/superpowers/reviews/: 2026-07-20-effect-layer-audit.md
docs/superpowers/specs/: 2026-07-20-ti-elevation-broker-design.md  2026-07-21-tweak-system-redesign-design.md
src/: app.css  app.d.ts  app.html
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/examples/: test_loader.rs  test_yaml_parse.rs
src-tauri/src/: README.md  debug.rs  error.rs  lib.rs  main.rs  setup.rs  state.rs  window_watchdog.rs
src-tauri/src/commands/: backup.rs  debug.rs  elevation.rs  general.rs  mod.rs  profile.rs  search.rs  system.rs  tweaks.rs  update.rs
src-tauri/src/commands/tweaks/: apply.rs  batch.rs  helpers.rs  mod.rs  query.rs
src-tauri/src/models/: backup.rs  inspection.rs  mod.rs  profile.rs  registry.rs  system.rs  tweak.rs  tweak_schema.rs  tweak_snapshot.rs  win_types.rs
src-tauri/src/services/: backup_service.rs  firewall_service.rs  hosts_service.rs  mod.rs  registry_service.rs  registry_value.rs  scheduler_service.rs  service_control.rs  system_info_service.rs  trusted_installer.rs  tweak_loader.rs
src-tauri/src/services/backup/: capture.rs  compare.rs  detection.rs  helpers.rs  inspection.rs  mod.rs  restore.rs  roundtrip_tests.rs  storage.rs
src-tauri/src/services/elevation/: broker.rs  common.rs  level.rs  mod.rs  service_ops.rs  system_elevation.rs  ti_elevation.rs
src-tauri/src/services/profile/: archive.rs  export.rs  import.rs  migration.rs  mod.rs  validation.rs
src-tauri/src/tweaks/: e2e_tests.rs  mod.rs  model.rs  parse.rs  schema.rs  shared_claims.rs  snapshot.rs  validate.rs  winver.rs
src-tauri/src/tweaks/engine/: apply.rs  context.rs  detect.rs  lifecycle.rs  mod.rs  revert.rs
src-tauri/src/tweaks/kinds/: action.rs  firewall.rs  hosts.rs  mod.rs  registry.rs  service.rs  task.rs
src-tauri/tweaks/: examples.yaml  gaming.yaml  network.yaml  performance.yaml  power.yaml  privacy.yaml  security.yaml  services.yaml  ui.yaml  windows_update.yaml
src-tauri/tweaks_fixtures/bad/: all_optional_option.yaml  bad_path_trailing_backslash.yaml  differ_only_by_noundo_action.yaml  dup_address_direct_vs_shared.yaml  dup_address_firewall_rule.yaml  dup_address_hosts_entry.yaml  dup_address_in_one_tweak.yaml  dup_address_three_tweaks.yaml  dup_address_two_tweaks.yaml  dup_shared_decls.yaml  ephemeral_with_probe.yaml  ephemeral_with_undo.yaml  identical_on_detectable_projection.yaml  if_missing_without_optional.yaml  null_option_value.yaml  option_missing_setting.yaml  reversible_flag_lies.yaml  services_start_raw_registry.yaml  shared_entry_omitted.yaml  shared_only_distinguisher.yaml  shared_unclaimed_undetectable.yaml  ti_disabled_by_typed_effect.yaml  undetectable_on_one_milestone.yaml  whole_vs_field_mix.yaml
src-tauri/tweaks_fixtures/good/: category_a.yaml  category_b.yaml  differ_only_by_undo_action_ok.yaml
src/lib/: index.ts
src/lib/actions/: tooltip.ts
src/lib/api/: index.ts  profile.ts  tweaks.ts  update.ts
src/lib/components/: AboutModal.svelte  ApplyingOverlay.svelte  CategorySection.svelte  CategoryTab.svelte  ColorSchemePicker.svelte  ConfirmDialog.svelte  ControlButton.svelte  DebugPanel.svelte  ExternalLink.svelte  FavoritesTab.svelte  FilterBar.svelte  HardwareItem.svelte  Icon.svelte  Marquee.svelte  OverviewTab.svelte  PendingRebootBanner.svelte  SearchTab.svelte  SettingsModal.svelte  Sidebar.svelte  SnapshotsTab.svelte  StatsCard.svelte  SystemInfoCard.svelte  ThemeToggle.svelte  TitleBar.svelte  ToastContainer.svelte  TweakCard.svelte  TweakDetailsModal.svelte  UpdateModal.svelte  index.ts
src/lib/components/debug/: DebugPanel.svelte  index.ts
src/lib/components/feedback/: ApplyingOverlay.svelte  RebootBanner.svelte  ToastContainer.svelte  index.ts
src/lib/components/layout/: Sidebar.svelte  TitleBar.svelte  WindowControlButton.svelte  index.ts
src/lib/components/modals/: AboutModal.svelte  ConfirmDialog.svelte  ProfileExportModal.svelte  ProfileImportModal.svelte  SettingsModal.svelte  TweakDetailsModal.svelte  UpdateModal.svelte  index.ts
src/lib/components/settings/: index.ts  (+2 more)
src/lib/config/: app.ts
src/lib/stores/: colorScheme.svelte.ts  colorScheme.ts  debug.svelte.ts  favorites.svelte.ts  index.ts  layout.svelte.ts  layout.ts  modal.svelte.ts  modal.ts  navigation.svelte.ts  navigation.ts  profile.svelte.ts  search.svelte.ts  settings.svelte.ts  settings.ts  systemElevation.svelte.ts  systemElevation.ts  theme.svelte.ts  toast.svelte.ts  tweakDetailsModal.svelte.ts  tweakDetailsModal.ts  tweaks.svelte.ts  tweaks.ts  tweaksActions.svelte.ts  tweaksData.svelte.ts  tweaksLoading.svelte.ts  tweaksPending.svelte.ts  update.svelte.ts  update.ts
src/lib/types/: index.ts
src/lib/utils/: persistentStore.svelte.ts
src/routes/: +layout.svelte  +page.svelte
(+51 files in other folders)
