[package]
name = "magicx-toolbox"
version = "3.0.0"
description = "MagicX Toolbox - Windows System Optimization & Tweaking Application"
authors = ["Ehsan Khan <ehsan18t@gmail.com>"]
license = "MIT"
repository = "https://github.com/ehsan18t/magicx-toolbox-gui"
homepage = "https://github.com/ehsan18t/magicx-toolbox-gui"
keywords = ["tauri", "windows", "tweaks", "optimization"]
categories = ["utilities"]
edition = "2021"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
regex = "1"  # For validating task_name_pattern in YAML

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-prevent-default = "4"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

# Async runtime (for sleep in watchdog) - minimal features only
tokio = { version = "1", default-features = false, features = ["time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling & logging
log = "0.4"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# HTTP client for update checking
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
regex-lite = "0.1"

# File locking for concurrent access safety
fs4 = "0.13"

# Parallel iteration for performance
rayon = "1"

# Profile system - ZIP archives
zip = { version = "2", default-features = false, features = ["deflate"] }

# Profile system - checksums and hashing
sha2 = "0.10"
hex = "0.4"

# Profile system - machine identification
hostname = "0.4"



# Windows-specific (only for Windows builds)
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
wmi = "0.18"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Services",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

# Release profile optimizations
[profile.release]
# Enable link-time optimization for smaller, faster binary
lto = true
# Single codegen unit for better optimization (slower compile, faster runtime)
codegen-units = 1
# Strip symbols from release binary for smaller size
strip = true
# Optimize for size with performance (balanced)
opt-level = 3
# Abort on panic for smaller binary (no unwinding code)
panic = "abort"
