[package]
name = "magicx-toolbox"
version = "3.0.0"
description = "MagicX Toolbox - Windows System Optimization & Tweaking Application"
authors = ["Ehsan Khan <ehsan18t@gmail.com>"]
license = "MIT"
repository = "https://github.com/ehsan18t/magicx-toolbox-gui"
homepage = "https://github.com/ehsan18t/magicx-toolbox-gui"
keywords = ["tauri", "windows", "tweaks", "optimization"]
categories = ["utilities"]
edition = "2021"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yaml_bw, not serde_yml: the latter is affected by RUSTSEC-2025-0068
# (unsound, every version affected, no patched release) and its repo is archived.
serde_yaml_bw = "2.5"
regex = "1"  # For validating task_name_pattern in YAML
# tweaks/schema.rs (dev-only today) is written so build.rs can #[path]-include it later; that
# include will need thiserror's ValidationError derive to compile alongside model.rs/parse.rs.
thiserror = "2"

[dev-dependencies]
# Loads tweaks/schema.rs under `cargo test` only (see tweaks/mod.rs) — kept out of
# [dependencies] so the shipped binary never links a YAML parser.
serde_yaml_bw = "2.5"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-prevent-default = "4"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

# Async runtime (for sleep in watchdog) - minimal features only
tokio = { version = "1", default-features = false, features = ["time"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling & logging
log = "0.4"
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

# HTTP client for update checking (blocking; the update commands are sync). ureq pulls a fraction
# of reqwest's dependency tree (no tokio/hyper stack) while keeping rustls TLS.
ureq = { version = "2", features = ["json"] }
regex-lite = "0.1"

# Atomic snapshot writes (write to a temp file, then atomically rename over the target).
# File locking for the read-modify-write path now uses std::fs::File::lock (stable since 1.89).
tempfile = "3"

# Parallel iteration for performance
rayon = "1"






# Windows-specific (only for Windows builds)
[target.'cfg(windows)'.dependencies]
winreg = "0.55"
wmi = "0.18"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Services",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    # ReplaceFileW (atomic, ACL-preserving hosts-file replace -- see services/hosts_service.rs)
    "Win32_Storage_FileSystem",
    # Get/SetNamedSecurityInfoW -- explicit owner+DACL capture/restore around that same replace,
    # since ReplaceFileW alone does not preserve the owner (empirically confirmed; implies
    # Win32_Security, already enabled above).
    "Win32_Security_Authorization",
    # BCryptGenRandom -- CSPRNG source for the Action kind's Cmd temp-script filename (no direct
    # rand/getrandom/uuid dependency exists in this tree; see tweaks/kinds/action.rs).
    "Win32_Security_Cryptography",
    # CreateJobObjectW/AssignProcessToJobObject/TerminateJobObject -- binds a Cmd/PowerShell
    # Action's child (and anything it spawns) into a kill-on-close container so a bounded timeout
    # is a real guarantee on the whole process tree, not just the immediate pid (see
    # tweaks/kinds/action.rs).
    "Win32_System_JobObjects",
] }
# High-level COM wrappers (Task Scheduler). Coexists with windows-sys; the elevated broker (TI
# stage) reuses this crate for Owned<HANDLE> cleanup.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_TaskScheduler",
    "Win32_System_Variant",
] }

# Release profile optimizations
[profile.release]
# Enable link-time optimization for smaller, faster binary
lto = true
# Single codegen unit for better optimization (slower compile, faster runtime)
codegen-units = 1
# Strip symbols from release binary for smaller size
strip = true
# Optimize for size with performance (balanced)
opt-level = 3
# Abort on panic for smaller binary (no unwinding code)
panic = "abort"
